Further refactoring of questions logic